// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <SectionHeader
    isOpen={false}
    isTransparent={false}
    text="foo"
  >
    <h2
      aria-label="foo"
      className="section-header orion-fusion-theme"
    >
      <span
        className="arrange-wrapper"
      >
        <Arrange
          className="title-arrange"
          fill={
            <span
              aria-hidden={false}
              className="title"
            >
              foo
            </span>
          }
        >
          <span
            className="arrange title-arrange"
          >
            <span
              className="fit fit-block"
            />
            <span
              className="fill fill-block"
            >
              <span
                aria-hidden={false}
                className="title"
              >
                foo
              </span>
            </span>
            <span
              className="fit"
            />
          </span>
        </Arrange>
      </span>
    </h2>
  </SectionHeader>
</ThemeContextProvider>
`;

exports[`SectionHeader should render a default component 1`] = `
<h2
  aria-label="foo"
  className="section-header"
>
  <span
    className="arrange-wrapper"
  >
    <Arrange
      className="title-arrange"
      fill={
        <span
          aria-hidden={false}
          className="title"
        >
          foo
        </span>
      }
    />
  </span>
</h2>
`;

exports[`SectionHeader should render with an accordion icon in the open position when an 'onClick()' callback and 'isOpen' is passed 1`] = `
<h2
  class="section-header is-interactable"
  tabindex="0"
>
  <button
    aria-expanded="true"
    aria-label="foo"
    class="arrange-wrapper"
    tabindex="-1"
    type="button"
  >
    <span
      class="arrange title-arrange"
    >
      <span
        class="fit fit-block"
      >
        <span
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon is-open"
          />
        </span>
      </span>
      <span
        class="fill fill-block"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          foo
        </span>
      </span>
      <span
        class="fit"
      />
    </span>
  </button>
</h2>
`;

exports[`SectionHeader should render with an accordion icon when an 'onClick()' callback is passed 1`] = `
<h2
  class="section-header is-interactable"
  tabindex="0"
>
  <button
    aria-expanded="false"
    aria-label="foo"
    class="arrange-wrapper"
    tabindex="-1"
    type="button"
  >
    <span
      class="arrange title-arrange"
    >
      <span
        class="fit fit-block"
      >
        <span
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon"
          />
        </span>
      </span>
      <span
        class="fill fill-block"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          foo
        </span>
      </span>
      <span
        class="fit"
      />
    </span>
  </button>
</h2>
`;

exports[`SectionHeader should render without an accordion icon when no 'onClick()' is passed 1`] = `
<h2
  aria-label="foo"
  class="section-header"
>
  <span
    class="arrange-wrapper"
  >
    <span
      class="arrange title-arrange"
    >
      <span
        class="fit fit-block"
      />
      <span
        class="fill fill-block"
      >
        <span
          aria-hidden="false"
          class="title"
        >
          foo
        </span>
      </span>
      <span
        class="fit"
      />
    </span>
  </span>
</h2>
`;
